Исправил ошибку с nullPointerException